--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -1,4 +1,5 @@
 
+{% load static %}
 <header class="header-container">
     <div class="header container">
         <div class="logo">
@@ -8,10 +9,48 @@
                     <i class="fa-solid fa-trophy"></i>
                 </a>
             </h2>
-            <form action="{% url 'authors:logout'%}" method="POST">
-                {% csrf_token %}
-                <button type="submit">Sair</button>
-            </form>
+        </div>
+        <div class="header-buttons">
+            {% if is_in_a_quiz %}
+            <a class="header-button" href="{%  url "quizmania:home" %}" >
+                <i class="fa-solid fa-house"></i>
+            </a>
+            {% else %}
+            <div class="header-button" id="menu">
+                
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+            </div>
+            {% endif %}
+            
+            <nav class="menu-content none">
+                {% if user.is_authenticated %}
+                    <a href="{% url "quizmania:profile"%}">Perfil</a>
+                    <a href="{%url "quizmania:ranking" %}">Ranking</a>
+                    <a href="{% url "quizmania:home"%}">Quizes</a>
+                    <form action="{% url 'authors:logout'%}" method="POST" id="logout-form">
+                        {% csrf_token %}
+                        <button type="submit" class="">Sair</i></button>
+                        <div class="confirmation-logout none">
+                            <h2>Tem certeza que deseja sair?</h2>
+                            <div class="options">
+                                <div class="logout">
+                                    Sim
+                                </div>
+                                <div class="cancel">
+                                    Não
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                {% else %}
+                    <a href="{% url "authors:login" %}">Entrar</a>
+                    <a href="{%url "quizmania:ranking" %}">Ranking</a>
+                    <a href="{% url "quizmania:home"%}">Quizes</a>
+                {% endif %}
+                
+            </nav>
         </div>
     </div>
 </header>
+<script src="{% static "global/js/menu.js" %}"></script>
+<script src="{% static "global/js/confirmation_logout.js" %}"></script>
